--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
+attrs==22.1.0
+colorama==0.4.5
 contourpy==1.0.5
 cycler==0.11.0
 fonttools==4.37.4
+iniconfig==1.1.1
 kiwisolver==1.4.4
 matplotlib==3.6.1
 numpy==1.23.3
 packaging==21.3
 pandas==1.5.0
 Pillow==9.2.0
+pluggy==1.0.0
+py==1.11.0
 pyparsing==3.0.9
+pytest==7.1.3
 python-dateutil==2.8.2
 pytz==2022.4
 scipy==1.9.2
 six==1.16.0
+tomli==2.0.1
