--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,65 @@
+asttokens==2.0.8
 attrs==22.1.0
+azure-core==1.26.0
+azure-storage-blob==12.14.0
+backcall==0.2.0
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
 colorama==0.4.5
 contourpy==1.0.5
+cryptography==38.0.1
 cycler==0.11.0
+datareservoirio==0.10.4
+debugpy==1.6.3
+decorator==5.1.1
+entrypoints==0.4
+executing==1.1.1
 fonttools==4.37.4
+idna==3.4
+importlib-resources==5.10.0
 iniconfig==1.1.1
+ipykernel==6.16.0
+ipython==8.5.0
+isodate==0.6.1
+jedi==0.18.1
+jupyter-core==4.11.1
+jupyter_client==7.4.2
 kiwisolver==1.4.4
 matplotlib==3.6.1
+matplotlib-inline==0.1.6
+msrest==0.7.1
+nest-asyncio==1.5.6
 numpy==1.23.3
+oauthlib==3.2.1
 packaging==21.3
 pandas==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
 Pillow==9.2.0
 pluggy==1.0.0
+prompt-toolkit==3.0.31
+psutil==5.9.2
+pure-eval==0.2.2
 py==1.11.0
+pyarrow==9.0.0
+pycparser==2.21
+Pygments==2.13.0
 pyparsing==3.0.9
 pytest==7.1.3
 python-dateutil==2.8.2
 pytz==2022.4
+pywin32==304
+pyzmq==24.0.1
+requests==2.28.1
+requests-oauthlib==1.3.1
 scipy==1.9.2
 six==1.16.0
+stack-data==0.5.1
 tomli==2.0.1
+tornado==6.2
+traitlets==5.4.0
+typing_extensions==4.4.0
+urllib3==1.26.12
+wcwidth==0.2.5
+zipp==3.9.0
