--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,29 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "MCSimPython"
-version = "0.0.1"
+version = "0.0.5"
 authors = [
   { name="Jan-Erik Hygen", email="janereh@stud.ntnu.no" },
 ]
 description = "Python vessel simulation environment"
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
 ]
+
+dependencies = [
+    "numpy",
+    "pandas",
+    "scipy",
+    "matplotlib"
+]
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
