Update file structure and publish to PyPi
- Version 0.0.12 published to PyPi MCSimPython
- Changed import structure in files
- Update MANIFEST.in for new file structure
- Update documentation

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include src/vessel_data/CSAD/*.json
-include src/vessel_data/CSAD/*.npy
-include src/vessel_data/gunnerus/*.json
-include src/vessel_data/gunnerus/*.pkl
+include src/MCSimPython/vessel_data/CSAD/*.json
+include src/MCSimPython/vessel_data/CSAD/*.npy
+include src/MCSimPython/vessel_data/gunnerus/*.json
+include src/MCSimPython/vessel_data/gunnerus/*.pkl
