--- a/ros_ws/src/simulator/package.xml
+++ b/ros_ws/src/simulator/package.xml
@@ -19,4 +19,10 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
+
+  <!-- The export tag contains other, unspecified, tags -->
+  <export>
+    <!-- Other tools can request additional information be placed here -->
+
+  </export>
 </package>
